@@ -33,7 +33,8 @@
             "result": "200",
             "context": null,
             "spans": null,
-            "sampled": null
+            "sampled": null,
+            "span_count": null
         },
         {
             "id": "85925e55-b43f-4340-a8e0-df1906ecbf78",
@@ -42,6 +43,7 @@
             "duration": 13.980558,
             "timestamp": "2017-05-30T18:53:42Z",
             "sampled": null,
+            "span_count": {},
             "context": {
                 "request": null,
                 "response": null,
@@ -57,6 +59,9 @@
             "duration": 13.980558,
             "timestamp": "2017-05-30T18:53:42.281999Z",
             "sampled": null,
+            "span_count": {
+                "dropped": null
+            },
             "context": {
                 "request": {
                     "socket": null,
@@ -98,6 +103,11 @@
             "duration": 13.980558,
             "timestamp": "2017-05-30T18:53:42.281Z",
             "sampled": null,
+            "span_count": {
+              "dropped": {
+                  "total": null
+              }
+            },
             "context": {
                 "request": {
                     "socket": {
