@@ -59,6 +59,20 @@
         "sampled": {
             "type": ["boolean", "null"],
             "description": "Transactions that are 'sampled' will include all available information. Transactions that are not sampled will not have 'spans' or 'context'. Defaults to true."
+        },
+        "span_count": {
+            "type": ["object", "null"],
+            "properties": {
+                "dropped": {
+                    "type": ["object", "null"],
+                    "properties": {
+                        "total": {
+                            "type": ["number","null"],
+                            "description": "Number of spans that have been dropped by the agent recording the transaction."
+                        }
+                    }
+                }
+            }
         }
     },
     "required": ["id", "name", "duration", "type", "timestamp"]
